; ModuleID = '/home/carl/AnghaBench/timescaledb/src/extr_process_utility.c_continuous_agg_with_clause_perm_check.c'
source_filename = "/home/carl/AnghaBench/timescaledb/src/extr_process_utility.c_continuous_agg_with_clause_perm_check.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ERROR = common dso_local global i32 0, align 4
@ERRCODE_INSUFFICIENT_PRIVILEGE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [43 x i8] c"must be owner of continuous aggregate \22%s\22\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32)* @continuous_agg_with_clause_perm_check to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @continuous_agg_with_clause_perm_check(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i32, i32* %4, align 4
  %7 = call i32 @ts_rel_get_owner(i32 %6)
  store i32 %7, i32* %5, align 4
  %8 = call i32 (...) @GetUserId()
  %9 = load i32, i32* %5, align 4
  %10 = call i32 @has_privs_of_role(i32 %8, i32 %9)
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %20, label %12

12:                                               ; preds = %2
  %13 = load i32, i32* @ERROR, align 4
  %14 = load i32, i32* @ERRCODE_INSUFFICIENT_PRIVILEGE, align 4
  %15 = call i32 @errcode(i32 %14)
  %16 = load i32, i32* %4, align 4
  %17 = call i32 @get_rel_name(i32 %16)
  %18 = call i32 @errmsg(i8* getelementptr inbounds ([43 x i8], [43 x i8]* @.str, i64 0, i64 0), i32 %17)
  %19 = call i32 @ereport(i32 %13, i32 %18)
  br label %20

20:                                               ; preds = %12, %2
  ret void
}

declare dso_local i32 @ts_rel_get_owner(i32) #1

declare dso_local i32 @has_privs_of_role(i32, i32) #1

declare dso_local i32 @GetUserId(...) #1

declare dso_local i32 @ereport(i32, i32) #1

declare dso_local i32 @errcode(i32) #1

declare dso_local i32 @errmsg(i8*, i32) #1

declare dso_local i32 @get_rel_name(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
